--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecodrive-agency",
+  "name": "motorista-particular-jaraguá-do-sul",
   "private": true,
   "version": "0.0.0",
   "type": "module",
